Fix scrollbar

--- a/parallax.scss
+++ b/parallax.scss
@@ -38,7 +38,7 @@
     z-index: 0;
     svg {
         flex-shrink: 0;
-        width: 100vw;
+        width: 100%;
         height: auto;
         display: block;
     }
